--- a/02_模版语法/test.html
+++ b/02_模版语法/test.html
@@ -11,13 +11,9 @@
       src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"
     ></script>
     <script type="text/javascript">
-      // 创建Vue实例
       const vm = new Vue({
-        // 配置对象
-        el: "#app", // V：element: 选择器
-        data: {
-          // M:数据
-        },
+        el: "#app",
+        data: {},
       });
     </script>
   </body>
