--- a/04_class与style绑定/test.html
+++ b/04_class与style绑定/test.html
@@ -15,10 +15,8 @@
       src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"
     ></script>
     <script type="text/javascript">
-      // 创建Vue实例
       const vm = new Vue({
-        // 配置对象
-        el: "#app", // V：element: 选择器
+        el: "#app", 
         data: {
           
         },
