--- a/03_计算属性和监听/test.html
+++ b/03_计算属性和监听/test.html
@@ -6,20 +6,18 @@
     <title>计算属性和监听</title>
   </head>
   <body>
+    <!-- 
+      计算属性：根据已有的数据，计算出一个新的属性值，并且这个属性值会随着相关数据的变化而自动更新，有缓存功能
+              getter：get属性，读取属性值时调用，多次读取不会重复计算，直接使用缓存的值，只执行一次getter
+              setter：set属性，设置属性值时调用
+      监听器：监听某个数据的变化，从而执行对应的回调函数
+     -->
     <div id="app">
       姓：<input type="text" placeholder="请输入" v-model="firstName" /><br />
       名：<input type="text" placeholder="请输入" v-model="lastName" /><br />
-      全名1(单向):<input
-        type="text"
-        placeholder="FullName1"
-        v-model="fullName1"
-      /><br />
-      全名2(单向):<input
-        type="text"
-        placeholder="FullName2"
-        v-model="fullName2"
-      /><br />
-      全名3(双向):<input type="text" placeholder="FullName3" /><br />
+      全名1(单向):<input type="text" v-model="fullName1" /><br />
+      全名2(单向):<input type="text" v-model="fullName2" /><br />
+      全名3(双向):<input type="text" v-model="fullName3" /><br />
     </div>
 
     <script
@@ -43,12 +41,13 @@
           },
           fullName3: {
             // 计算属性中的一个属性，属性是一个对象，对象中有get和set方法
-            // 回调函数 计算并返回当前属性的值
+            // 回调函数 当需要读取当前属性值时回调，根据相关的数据计算并返回当前属性的值
             get() {
               return this.firstName + " " + this.lastName;
             },
-            // 回调函数 设置属性值时触发
+            // 回调函数 监听当前属性值的变化，当属性值发生改变时回调，更新相关的属性数据
             set(value) {
+              // value是最新的fullName3的值
               const names = value.split(" ");
               this.firstName = names[0];
               this.lastName = names[1];
@@ -56,9 +55,11 @@
           },
         },
         // 监听器
-        watch: { //监视data中的数据变化，从而执行对应的回调函数
-          firstName(value) { //value是最新的firstName
-            console.log(this);// this就是VM实例
+        watch: {
+          //监视data中的数据变化，从而执行对应的回调函数
+          firstName(value) {
+            //value是最新的firstName
+            console.log(this); // this就是VM实例
             this.fullName2 = value + " " + this.lastName;
           },
         },
